--- a/lesson4_1.html
+++ b/lesson4_1.html
@@ -9,8 +9,7 @@
 
 
 
-<!--script src="app.js"></script-->
-<!--script-- src="lesson_3.js"></script-->
-<script src="cart.js"></script>
+
+<script src="lesson_4_1.js"></script>
 </body>
 </html>
